--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Indecision App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
